Partial fix for application steps CSS - headers slightly misaligned

--- a/src/fleming-theme/templates/common-scss/_cards.scss
+++ b/src/fleming-theme/templates/common-scss/_cards.scss
@@ -235,19 +235,3 @@
 // Special types
 
 @import 'cards-special';
-
-// ???
-
-.dark-card {
-  background: black;
-  color: white;
-}
-
-.application-card {
-  align-items: center;
-}
-
-.application-label {
-  text-align: center;
-  margin-top: 1.4em;
-}
