--- a/src/fleming-theme/templates/page-elements/status-box.scss
+++ b/src/fleming-theme/templates/page-elements/status-box.scss
@@ -19,7 +19,6 @@
 }
 
 .tickbox {
-    float: right;
     font-size: 2em;
     padding-right: 0.5em;
     position: absolute;
